# my_deep_learning

./: README.md  REAMME.md
01_神经网络_手写字体分类任务/: 01_神经网络_手写字体分类任务.py
02_神经网络_气温回归预测任务/: 02_神经网络_气温回归预测任务.py
03_卷积神经网络_测试/: 03_卷积神经网络_测试.py
04_图像识别模型与训练策略/: 04_图像识别与训练策略.py
05_dataloder数据处理/: 05_dataloder_数据处理.py
06_vit_源码/: train.py
06_vit_源码/models/: modeling.py
06_vit_源码/utils/: data_utils.py
07_swintransformer/: config.py  lr_scheduler.py  main.py  optimizer.py  utils.py
07_swintransformer/data/: build.py
07_swintransformer/models/: build.py  swin_transformer.py
08_ubuntu_ros2/: README.md
08_ubuntu_ros2/01-cmker-test/: CMakeLists.txt  hello_world.cpp
08_ubuntu_ros2/02-first-python-node/: ros2_first_python_node.py
08_ubuntu_ros2/03-first-c++-node/: CMakeLists.txt.back  ros2-first-cpp-node.cpp
08_ubuntu_ros2/04-first-python-pkg/first_python_pkg/: setup.py
08_ubuntu_ros2/04-first-python-pkg/install/first_python_pkg/lib/first_python_pkg/: first_python_pkg_exe
08_ubuntu_ros2/04-first-python-pkg/install/first_python_pkg/share/first_python_pkg/: package.xml
08_ubuntu_ros2/05-first-cpp-pkg/first-cpp-pkg/: CMakeLists.txt  package.xml
08_ubuntu_ros2/05-first-cpp-pkg/first-cpp-pkg/src/: first-cpp-pkg-node1.cpp
08_ubuntu_ros2/06-cpp-learning-ws/cpp-learning/: CMakeLists.txt  package.xml
08_ubuntu_ros2/06-cpp-learning-ws/cpp-learning/src/: cpp-learn.cpp
08_ubuntu_ros2/07-cpp-learning-ws/cpp-learning/: CMakeLists.txt
08_ubuntu_ros2/07-cpp-learning-ws/cpp-learning/src/: learn-functional.cpp  learn-lambda.cpp  learn-shared-ptr.cpp  learn_auto.cpp
08_ubuntu_ros2/07-cpp-learning-ws/python-learning/: setup.py
08_ubuntu_ros2/07-cpp-learning-ws/python-learning/python_learning/: learn_thread.py
